--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "nodemailer": "^6.9.6"
   },
   "scripts": {
-    "start": "node ./index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
